--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -6310,6 +6310,9 @@ button.close {
 /*
  * Elements
  */
+label[for] {
+  cursor: pointer;
+}
 /* URLs */
 a,
 a:visited {
@@ -6420,6 +6423,53 @@ textarea.form-group textarea {
   height: auto;
 }
 .form-group textarea {
+  height: auto;
+}
+/* Content filter UI */
+.content-filter-ui select {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555555;
+  background-color: #ffffff;
+  background-image: none;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+  display: inline-block;
+  width: 100px;
+}
+.content-filter-ui select:focus {
+  border-color: #66afe9;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, 0.6);
+}
+.content-filter-ui select::-moz-placeholder {
+  color: #999999;
+  opacity: 1;
+}
+.content-filter-ui select:-ms-input-placeholder {
+  color: #999999;
+}
+.content-filter-ui select::-webkit-input-placeholder {
+  color: #999999;
+}
+.content-filter-ui select[disabled],
+.content-filter-ui select[readonly],
+fieldset[disabled] .content-filter-ui select {
+  cursor: not-allowed;
+  background-color: #eeeeee;
+  opacity: 1;
+}
+textarea.content-filter-ui select {
   height: auto;
 }
 /* Search box for model index pages */
