--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -6543,6 +6543,24 @@ button.close {
   white-space: nowrap;
   overflow: hidden;
 }
+.space-top-small {
+  margin-top: 10px;
+}
+.space-top {
+  margin-top: 20px;
+}
+.space-top-huge {
+  margin-top: 40px;
+}
+.space-bottom-small {
+  margin-bottom: 10px;
+}
+.space-bottom {
+  margin-bottom: 20px;
+}
+.space-bottom-huge {
+  margin-bottom: 40px;
+}
 .form-group label {
   text-overflow: ellipsis;
   white-space: nowrap;
