Small messaging module improvements

--- a/less/frontend.less
+++ b/less/frontend.less
@@ -290,6 +290,13 @@ a:hover { color: @primaryColor; }
     li .posts-count { position: absolute; right: 0px; top: 0px; }
 }
 
+.page-messages {
+    .message-text {
+        word-wrap: break-word; overflow-x: hidden;
+        img { max-width: 100% }
+    }
+}
+
 
 /*
  * Mainlayout
