Added navigations widget (alpha, wip)

--- a/less/frontend.less
+++ b/less/frontend.less
@@ -297,6 +297,16 @@ a:hover { color: @primaryColor; }
     }
 }
 
+.widget-navigation {
+    .list-unstyled {
+        li.item-level-1 { padding-left: 20px }
+        li.item-level-2 { padding-left: 40px }
+        li.item-level-3 { padding-left: 60px }
+        li.item-level-4 { padding-left: 80px }
+        li.item-level-5 { padding-left: 100px }
+    }
+}
+
 
 /*
  * Mainlayout
