Added teams widget (also added UserActivitiesMonitor class)

--- a/less/frontend.less
+++ b/less/frontend.less
@@ -297,7 +297,7 @@ a:hover { color: @primaryColor; }
     }
 }
 
-.widget-navigation {
+.widget-navigation-default {
     .list-unstyled {
         li.item-level-1 { padding-left: 20px }
         li.item-level-2 { padding-left: 40px }
@@ -307,6 +307,9 @@ a:hover { color: @primaryColor; }
     }
 }
 
+.widget-teams {
+    img { max-width: 100% }
+}
 
 /*
  * Mainlayout
