--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -7382,20 +7382,23 @@ textarea.model-search-box input {
 .page-messages .message-text img {
   max-width: 100%;
 }
-.widget-navigation .list-unstyled li.item-level-1 {
+.widget-navigation-default .list-unstyled li.item-level-1 {
   padding-left: 20px;
 }
-.widget-navigation .list-unstyled li.item-level-2 {
+.widget-navigation-default .list-unstyled li.item-level-2 {
   padding-left: 40px;
 }
-.widget-navigation .list-unstyled li.item-level-3 {
+.widget-navigation-default .list-unstyled li.item-level-3 {
   padding-left: 60px;
 }
-.widget-navigation .list-unstyled li.item-level-4 {
+.widget-navigation-default .list-unstyled li.item-level-4 {
   padding-left: 80px;
 }
-.widget-navigation .list-unstyled li.item-level-5 {
+.widget-navigation-default .list-unstyled li.item-level-5 {
   padding-left: 100px;
+}
+.widget-teams img {
+  max-width: 100%;
 }
 /*
  * Mainlayout
