Finished navigations module

--- a/less/backend.less
+++ b/less/backend.less
@@ -237,6 +237,19 @@ ul.pagination li {
     }
 }
 
+.page-navigations {
+    #items-table {
+        th.urls { width: 50% }
+        th.actions { width: 20% }
+        tr.item-level-1 td:first-child { padding-left: 20px }
+        tr.item-level-2 td:first-child { padding-left: 40px }
+        tr.item-level-3 td:first-child { padding-left: 60px }
+        tr.item-level-4 td:first-child { padding-left: 80px }
+        tr.item-level-5 td:first-child { padding-left: 100px }
+    }
+    #item_add { margin-top: 20px; }
+}
+
 .editor-flags {
     img { cursor: pointer }
 }
