Forums: Quoting works now, also improved navigation

--- a/less/frontend.less
+++ b/less/frontend.less
@@ -263,7 +263,7 @@ a:hover { color: @primaryColor; }
         .clearfix(); position: relative; margin-bottom: 10px; border: 2px solid #EEE;
         .meta {
             position: absolute; left: 0px; top: 0px; width: @metaWidth + 20px; height: 100%; min-height: @minHeight; box-sizing: border-box; padding: 10px; background-color: #EEE; float: left;
-            .username { .ellipsis(); display: block; }
+            .creator-name { .ellipsis(); display: block; }
             .avatar { display: block; }
             .counter { display: block; }
         }
