--- a/less/backend.less
+++ b/less/backend.less
@@ -1,52 +1,32 @@
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700');
-@import 'base';
+/*
+ * Imports
+ */
 
-::selection { background: #ff6100; color: white; }
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import 'bootstrap/bootstrap';
+@import 'shared';
+
+/* 
+ * Global Variables
+ */
+
+@textblack: #424242;
+@bgblack: #1a1f23;
+@lightgray: #f3f3f3;
+@gray: #e1e1e1;
+@blue: #139cdc;
+@hoverblue: #0A8CC9;
+@white: #fff;
+
+@font-family: 'Open Sans', sans-serif;
+
+::selection { background: @blue; color: white; }
 
 /*
  * Elements
  */
 
-body { }
 
-/* URLs */
-a, a:visited { color: #666666; text-decoration: none; font-weight: normal; }
-a:hover, a:active { color: #0066CC; text-decoration: none; font-weight: normal; }
-
-/* Headings */
-h1 { color: #ff6100; }
-h2 { }
-h3 { }
-h4 { }
-h5 { }
-
-p { line-height: 1.5 }
-
-/* Table Elements */
-table { font-family: 'Open Sans', Tahoma; font-size: 13px; color: #666; border-collapse: collapse; }
-tr { }
-th { }
-td { vertical-align: top }
-
-/* Form Elements */
-form {  }
-fieldset { border: none; }
-textarea { padding: 5px 10px; border: 1px solid #CCC; border-radius: 3px; .background-image('theme/bg_textbox.png'); background-repeat: repeat-x; font-family: Tahoma, Arial; color: #666666 }
-input { border: 1px solid #CCC; border-radius: 3px; .background-image('theme/bg_textbox.png'); font-family: 'Open Sans', Arial; font-size: 13px; color: #666666; }
-input[type=checkbox] { width: auto !important; padding: 0px !important; cursor: pointer }
-input[type=text], input[type=url] { width: 300px; height: 22px !important; padding: 0px 10px }
-input[type=submit], input[type=reset] { height: 26px; color: #666666;
-    background: linear-gradient(to bottom,  #ffffff 0%,#e6e6e6 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 );
-} /* height = input["text"].height + 4px */
-input[type=file] { height: 26px; } /* height = input["text"].height + 4px */
-input[type=button], button { padding: 0px 10px; border: 1px solid #CCC; border-radius: 3px; height: 26px; color: #666666;
-    background: linear-gradient(to bottom,  #ffffff 0%,#e6e6e6 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 );
-} /* height = input["text"].height + 4px */
-input[type=submit]:focus, button:focus { border-color: #ff6100; }
-button img { vertical-align: bottom; }
-select:not([size]) { margin: 0px; padding: 0px 10px; border: 1px solid #CCC; border-radius: 3px; .background-image('theme/bg_textbox.png'); height: 26px; }
 
 /*
  * Classes
@@ -76,16 +56,6 @@ h2.section { height: 30px; line-height: 30px; margin: 20px 0px; padding: 0px 10p
 
 /* Form */
 .form-errors { }
-.form-group { 
-    margin-bottom: 20px;
-    &.space-top {  }
-    label { display: inline-block; padding-top: 7px; cursor: pointer; word-wrap: break-word; float: left }
-    label:after { /* content: ':'; */ }
-    input { width: 40%; padding: 5px 10px; }
-    input[type=text]:focus, input[type=password]:focus, input[type=url]:focus { border-color: #ff6100; color: #4082E3 }
-    textarea { width: 40%; height: 100px; vertical-align: bottom; }
-    textarea:focus { border-color: #ff6100; color: #4082E3 }
-}
 .form-actions { 
     padding-top: 20px; 
     input[type=submit], button { margin-right: 10px; }
@@ -93,15 +63,6 @@ h2.section { height: 30px; line-height: 30px; margin: 20px 0px; padding: 0px 10p
 .form-editor { 
     margin-bottom: 20px;
     label.full-line { display: block; width: auto; height: 30px; line-height: 30px; padding: 0px 10px; border: 1px solid #EFEFEF; .background-image('theme/bg_textbox.png'); background-repeat: repeat-x }
-}
-
-/* Table */
-.table { 
-    width: 100%; border: 1px solid #EFEFEF;
-    th { height: 30px; padding-left: 5px; line-height:30px; .background-image('theme/backend/bg_tablehead.png'); background-repeat: repeat-x; font-weight:bold; text-align: left }
-    th a, th a:visited { color: gray; font-weight: bold } 
-    td { padding: 5px; border: 1px solid #EFEFEF; .background-image('theme/backend/bg_tablecell.png'); background-repeat: repeat-x; background-position: left bottom; }
-    tr:hover { color:#333333 }
 }
 
 .form-helpers {
@@ -118,7 +79,7 @@ h2.section { height: 30px; line-height: 30px; margin: 20px 0px; padding: 0px 10p
 
 /* Sort-Switcher */
 .sort-switcher { 
-    display: inline-block; margin: 10px 0px; padding: 3px 7px; border-radius: 3px; background-color: #333; color: white !important;
+    display: inline-block; margin: 10px 0px; padding: 3px 7px; border-radius: 3px; background-color: @bgblack; color: white !important;
     img { vertical-align: bottom; }
 }
 .form-helpers .sort-switcher { margin: 0px }
@@ -126,66 +87,26 @@ h2.section { height: 30px; line-height: 30px; margin: 20px 0px; padding: 0px 10p
 /* Recycle Bin Button */
 .recycle-bin-button { 
     display: inline-block; margin: 10px 0px; padding: 3px 7px; border-radius: 3px;
-    &.enabled { background-color: #333; color: white !important }
-    &.disabled { background-color: #CCC; color: #999 !important }
+    &.enabled { background-color: @bgblack; color: white !important }
+    &.disabled { background-color: #DDD; color: #999 !important }
 }
 .form-helpers .recycle-bin-button { margin: 0px }
 
 /* Pagination */
-ul.pagination li { 
-    position: relative; width: 8px; height: 16px; margin: 0px 2px; padding: 2px 6px; border: 1px solid #C6C6C6; border-radius: 3px; background-color: #EFEFEF; font-weight: bold;
-    a { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; line-height: 20px; text-align: center; font-weight: bold }
-    a:hover { background-color: #C6C6C6; color: #FF6100 }
-    &.active { border: 1px solid #936E41; background-color: #FF6100; color: white }
-    &.disabled { display: none }
-}
 .form-helpers ul.pagination { float: right; }
 
 /* Tooltip */
-#tooltip { 
-    display: none; position: absolute; background: #232323; padding: 5px; opacity: 1.0; border-radius: 3px; font-size: 13px; color: white;
-    img { max-width: 600px; max-height: 450px }
-    p { margin: 0px 0px 10px 0px }
-    p:last-child { margin: 0px }
-}
 .hover-ui { display: none; }
-
-/* Confirm Question */
-.boxer-plain { 
-    width: 300px;
-}
-.boxer-confirm { 
-    width: 300px;
-    h2 { margin: 0px 0px 20px 0px; font-size: 14px; font-weight: normal; }
-    button { margin-right: 5px }
-    label { width: 30% !important }
-}
 
 /* Datetime Picker */
 .date-time-picker input { width: 128px; border-top-right-radius: 0px; border-bottom-right-radius: 0px; }
 .date-time-picker .add-on { display: inline-block; height: 22px; margin-left: 1px; padding: 5px 10px; border: 1px solid #CCCCCC; border-top-right-radius: 3px; border-bottom-right-radius: 3px; background-color: #F9F9F9; cursor: pointer }
-.bootstrap-datetimepicker-widget { 
-    ul { padding-left: 0px }
-    li { line-height: 20px }
-    &.dropdown-menu { display: none; position: absolute; border: 1px solid rgba(0, 0, 0, 0.196); border-radius: 3px; box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.196) }
-    .collapse { height: 0px; overflow-y: hidden; }
-    .collapse.in { height: auto }
-    .picker-switch i { display: block; width: 100%; height: 26px; background-position: center; background-repeat: no-repeat; cursor: pointer }
-    .table-condensed th, .bootstrap-datetimepicker-widget .table-condensed td { padding: 4px 5px; text-align: center; vertical-align: middle; }
-    a.btn { display: inline-block; width: 14px; height: 26px; line-height: 26px; padding: 0px 12px; border: 1px solid #CCCCCC; border-radius: 3px;
-        background: linear-gradient(to bottom,  #ffffff 0%,#e6e6e6 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 );
-    }
-    .icon-chevron-up::after { content: '+'; font-size: 21px; font-style: normal; font-weight: bold; }
-    .icon-chevron-down::after { content: '-'; font-size: 21px; font-style: normal; font-weight: bold; }
-}
-
 
 /* Tags */
-.form-group .bootstrap-tagsinput { max-width: 40% }
+/* .form-group .bootstrap-tagsinput { max-width: 40% } */
 
 /* Infotext */
-.info-text { color: #999 }
+/* .info-text { color: #999 } */
 
 /*
  * Subpages
@@ -267,81 +188,276 @@ ul.pagination li {
  * Mainlayout
  */
 
-body { font-family: 'Open Sans', Arial; font-size: 13px; color: #666; background-color: white; .background-image('theme/backend/background.png'); background-repeat: repeat-x; }
 
-#page-container { width: 986px; margin-left: auto; margin-right: auto }
-
-#nojavascript { 
-    padding: 10px; color: #ff6100; background-color: black; border: 2px #ff6100 solid;
-    img { vertical-align: text-top; margin-right: 10px }
+body {
+    margin: 0px;
+    padding: 0px;
+    font-weight: 400;
+    font-size: 14px;
+    color: @textblack;
+    font-family: @font-family;
+    background-color: @lightgray;
 }
 
-#header { position: relative; width: 100%; height: 219px; .background-image('theme/backend/header.png') }
-#header-logo { position: absolute; .background-image('theme/empty.png'); width: 270px; height: 92px }
-
-/* Header Nav */
-.hnav { position: absolute; .background-image('theme/backend/headernav.png'); top: 0px; height: 63px }
-#hnav1 { background-position: 0px 0px; left: 559px; width: 62px }
-#hnav1:hover { background-position: 0 -63px }
-#hnav2 { background-position: -62px 0px; left: 621px; width: 85px }
-#hnav2:hover { background-position: -62px -63px }
-#hnav3 { background-position: -147px 0px; left: 706px; width: 61px }
-#hnav3:hover { background-position: -147px -63px }
-#hnav4 { background-position: -208px 0px; left: 767px; width: 57px }
-#hnav4:hover { background-position: -208px -63px }
-#hnav5 { background-position: -265px 0px; left: 824px; width: 79px }
-#hnav5:hover { background-position: -265px -63px }
-.quicklink { position: absolute; .background-image('theme/empty.png'); top: 160px; width: 13px; height: 19px }
-
-#user-img { position: absolute; display: block; left: 6px; top: 112px; width: 45px; height: 60px }
-#user-img-overlay { position: absolute; display: block; left: 6px; top: 112px; z-index: 2 }
-#profile-link { position: absolute; display: block; .background-image('theme/empty.png'); left: 6px; top: 112px; width: 45px; height: 60px; z-index: 3 }
-#info-box { 
-    position: absolute; display: block; left: 72px; top: 120px; width: 180px; height: 50px; overflow: hidden; color: white; text-shadow: #404040 0px 1px 1px;
-    span { display: block; margin-bottom: 10px }
-    img { vertical-align: middle; }
-    a { color: inherit }
+*:focus {
+    outline: none;
+    outline-offset: 0px;
 }
-#info-bar { position: absolute; display: block; left: 670px; top: 95px; width: 230px; color: white; font-size: 11px; text-align: center }
-#tecslink { position: absolute; .background-image('theme/empty.png'); left: 931px; top: 92px; width: 15px; height: 20px }
 
-#content-wrapper { width: 100%; min-height: 785px; padding-bottom: 100px; .background-image('theme/backend/contentbg.png'); }
-#sidebar { float: left; width: 237px; padding: 0px 15px 0px 20px }
-
-/* Sidebar Nav */
-.menu-head { 
-    display: block; height: 51px; color: #FFFFFF; cursor: pointer;
-    &.daily { .background-image('theme/backend/nav_header_daily.png') }
-    &.perma { .background-image('theme/backend/nav_header_perma.png') }
-    &.esports { .background-image('theme/backend/nav_header_esport.png') }
-    &.website { .background-image('theme/backend/nav_header_website.png') }
+a:focus {
+    outline: none;
+    outline-offset: 0px;
+    text-decoration: none;
 }
-.selected {  }
-.submenu {
-    a, a:visited { position: absolute; left: 0px; top: 0px; width: 233px; height: 100%; color: #CCCCCC; z-index: 2 }
-    a:hover, a:active { color: #ff6100 }
-    i { position: absolute; left: 25px; width: 22px; text-align: center; }
-    .item { 
-        &:hover { color: #ff6100 }
-        position: relative; .background-image('theme/backend/nav_item_mid.png'); height: 38px; line-height: 38px;
-        a { text-indent: 60px;  }
-        i { top: 13px }
-        &:first-child { 
-            .background-image('theme/backend/nav_item_top.png'); height: 46px; line-height: 54px;
-            i { top: 20px }
+
+a {
+    text-decoration: none;
+    &:hover {
+        text-decoration: none;
+    }
+}
+
+h1,h2,h3,h4,h5,h6 {
+    margin: 0px;
+    padding: 0px;
+}
+
+img {
+    max-width: 100%;
+    height: auto !important;
+}
+
+.row {
+    margin: 0px;
+}
+
+header {
+    background-color: @blue;
+    color: @white;
+    font-size: 16px;
+    line-height: 3.5em;
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    z-index: 100;
+    nav {
+        float: right;
+        ul {
+            list-style: none;
+            margin: 0px;
+            padding: 0px;
+            li {
+                float: left;
+                width: auto;
+                a {
+                    padding: 0px 20px 0px 20px;
+                    color: @white;
+                }
+                &:hover {
+                    background-color: @hoverblue;
+                    a {
+                        color: @white;
+                    }
+                }
+            }
         }
-        &:last-child { 
-            .background-image('theme/backend/nav_item_bot.png'); height: 49px; line-height: 42px;
-            i { top: 15px }
+    }
+    .header-logo {
+        padding-left: 0px;
+    }
+}
+
+#menu {
+    background-color: @bgblack;
+    height: 100%;
+    position: fixed;
+    width: 250px;
+    padding: 80px 0px 0px 0px;
+    a {
+        display: block;
+    }
+    #account-menu {
+        text-align: center;
+        margin: 0px 0px 40px 0px;
+        .avatar {
+            font-weight: 300;
+            color: @white;
+            font-size: 18px;
+            padding: 0px 0px 10px 0px;
+            .image {
+                width: 100px;
+                height: 100px;
+                margin-left: auto;
+                margin-right: auto;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                border-radius: 100px;
+            }
+            .welcome {
+                font-weight: 700;
+                display: block;
+            }
+        }
+        span {
+            color: @white;
+            font-size: 16px;
+            margin: 0px 10px 0px 10px;
+        }
+    }
+    #navigation {
+        .side-menu {
+            margin: 0px 0px 40px 0px;
+            a {
+                color: @white;
+                text-align: center;
+                font-weight: 300;
+                font-size: 22px;
+                padding: 10px 0px 10px 0px;
+                span {
+                    display: block;
+                    color: @lightgray;
+                    font-size: 48px;
+                    margin: 0 auto;
+                }
+            }
+            &:hover {
+                a {
+                    color: @blue;
+                    span {
+                        color: @blue;
+                    }
+                }
+            }
+            &.active {
+                border-left: 5px @blue solid;
+                a {
+                    color: @blue;
+                    span {
+                        color: @blue;
+                    }
+                }
+            }
         }
     }
 }
-.menu-bottom { .background-image('theme/backend/menu_bottom.png'); height: 17px }
 
-#main-content { width: 686px; }
-
-#footer { 
-    position: relative; width: 982px; height: 76px; margin-left: 2px; .background-image('theme/backend/footer.png');
-    a { display: block; position: absolute; .background-image('theme/empty.png'); left: 114px; top: 30px; width: 45px; height: 35px }
-    span { position: absolute; right: 20px; top: 40px; color: #444; /* text-shadow: 0px 1px 2px black; */ }
+#content {
+    margin: 0px 0px 0px 250px;
+    padding: 80px 0px 0px 0px;
+    .statistic-box {
+        background-color: @white;
+        height: 90px;
+        text-align: center;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        .statistic-box-blue {
+            background-color: @blue;
+            font-size: 48px;
+            color: @white;
+            width: 25%;
+            float: left;
+            line-height: 1.85em;
+            -webkit-border-top-left-radius: 5px;
+            -webkit-border-bottom-left-radius: 5px;
+            -moz-border-radius-topleft: 5px;
+            -moz-border-radius-bottomleft: 5px;
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+        }
+        .value {
+            font-weight: 700;
+            width: 75%;
+            float: left;
+            font-size: 30px;
+            padding: 9px 0px 0px 0px;
+        }
+        .description {
+            font-weight: 300;
+            width: 75%;
+            float: left;
+            font-size: 20px;
+            padding: 0px 0px 9px 0px;
+        }
+    }   
+    #chart {
+        width: 100%;
+        height: 350px;
+    }
+    .blue-box {     
+        color: @white;
+        text-align: center;
+        font-size: 16px;
+        background-color: @blue;
+        margin-bottom: 15px;
+        padding: 10px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        span {
+            display: block;
+            margin: 0px 0px 11px 0px;
+            font-size: 48px;
+        }
+        &:hover {
+            background-color: @hoverblue;
+        }
+    }
+    .box-area {
+        background-color: @white;
+        margin: 20px 15px 20px 15px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+        .box-header {
+            padding: 0px 20px 0px 0px;
+            height: 40px;
+            font-size: 18px;
+            line-height: 2.2em;
+            background-color: @blue;
+            color: @white;
+            -webkit-border-top-left-radius: 5px;
+            -webkit-border-top-right-radius: 5px;
+            -moz-border-radius-topleft: 5px;
+            -moz-border-radius-topright: 5px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            .icon-area {
+                background-color: @hoverblue;
+                float: left;
+                width: 40px;
+                text-align: center;
+                -webkit-border-top-left-radius: 5px;
+                -moz-border-radius-topleft: 5px;
+                border-top-left-radius: 5px;
+                font-size: 16px;
+                line-height: 2.5em;
+            }
+            .main-text {
+                font-weight: 700;
+                float: left;
+                padding: 0px 10px 0px 10px;
+            }
+            .small-text {
+                font-weight: 300;
+                float: left;
+            }
+            .edit-area {
+                float: right;
+                color: @white;
+                font-size: 16px;
+                line-height: 2.5em;
+                button {
+                    background-color: initial;
+                    border: none;
+                    padding: 0px;
+                }
+            }
+        }
+        .box-body {
+            padding: 20px;
+            clear: both;
+        }
+    }
 }
