Small updates (added Facebook & Twitter fields to user profile, LESS improvements)

--- a/css/shared.css
+++ b/css/shared.css
@@ -32,6 +32,9 @@
   white-space: nowrap;
   overflow: hidden;
 }
+.form-group label[for] {
+  cursor: pointer;
+}
 .numeric-input {
   text-align: right;
 }
