Added shoutbox (shouts) module, added new forums feature: "show new posts"

--- a/less/frontend.less
+++ b/less/frontend.less
@@ -280,6 +280,12 @@ a:hover { color: @primaryColor; }
     }
 }
 
+/* Forums show_new_posts üage */
+.page-threads.page-forums-threads-new {
+    .page-forums();
+}
+
+
 .widget-latest-threads {
     li { position: relative; }
     li .posts-count { position: absolute; right: 0px; top: 0px; }
