--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -7394,6 +7394,140 @@ textarea.model-search-box input {
   font-size: 10px;
   text-align: right;
 }
+/* Forums show_new_posts üage */
+.page-threads.page-forums-threads-new .action {
+  border-radius: 3px;
+  background-color: #139cdc;
+  color: #ffffff;
+}
+.page-threads.page-forums-threads-new .root-forum h2 {
+  margin: 0px;
+  padding: 10px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #139cdc;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+.page-threads.page-forums-threads-new .sub-forums:before,
+.page-threads.page-forums-threads-new .sub-forums:after {
+  content: " ";
+  display: table;
+}
+.page-threads.page-forums-threads-new .sub-forums:after {
+  clear: both;
+}
+.page-threads.page-forums-threads-new .sub-forums:before,
+.page-threads.page-forums-threads-new .sub-forums:after {
+  content: " ";
+  display: table;
+}
+.page-threads.page-forums-threads-new .sub-forums:after {
+  clear: both;
+}
+.page-threads.page-forums-threads-new .sub-forum {
+  padding: 10px;
+  border: 2px solid #eeeeee;
+  border-top: none;
+  overflow: hidden;
+}
+.page-threads.page-forums-threads-new .sub-forum .info {
+  width: 60%;
+  float: left;
+}
+.page-threads.page-forums-threads-new .sub-forum .info .desc {
+  display: block;
+  font-size: 10px;
+}
+.page-threads.page-forums-threads-new .sub-forum .threads {
+  width: 10%;
+  float: left;
+}
+.page-threads.page-forums-threads-new .sub-forum .latest {
+  width: 30%;
+  float: left;
+}
+.page-threads.page-forums-threads-new .sub-forum .latest .meta {
+  display: block;
+  font-size: 10px;
+}
+.page-threads.page-forums-threads-new .buttons {
+  margin-bottom: 20px;
+}
+.page-threads.page-forums-threads-new .sub-forums {
+  margin-bottom: 20px;
+}
+.page-threads.page-forums-threads-new .sub-forums h2 {
+  margin: 0px;
+  padding: 10px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #139cdc;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+.page-threads.page-forums-threads-new .threads:before,
+.page-threads.page-forums-threads-new .threads:after {
+  content: " ";
+  display: table;
+}
+.page-threads.page-forums-threads-new .threads:after {
+  clear: both;
+}
+.page-threads.page-forums-threads-new .threads:before,
+.page-threads.page-forums-threads-new .threads:after {
+  content: " ";
+  display: table;
+}
+.page-threads.page-forums-threads-new .threads:after {
+  clear: both;
+}
+.page-threads.page-forums-threads-new .threads .thread {
+  padding: 10px;
+  border: 2px solid #eeeeee;
+  border-top: none;
+  overflow: hidden;
+}
+.page-threads.page-forums-threads-new .threads .thread.head {
+  padding: 10px;
+  border: none;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #139cdc;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+.page-threads.page-forums-threads-new .threads .thread .info {
+  width: 60%;
+  float: left;
+}
+.page-threads.page-forums-threads-new .threads .thread .info .sticky,
+.page-threads.page-forums-threads-new .threads .thread .info .closed {
+  padding: 2px;
+  border-radius: 3px;
+  background-color: #139cdc;
+  font-size: 10px;
+  color: white;
+}
+.page-threads.page-forums-threads-new .threads .thread .info .meta {
+  display: block;
+  font-size: 10px;
+}
+.page-threads.page-forums-threads-new .threads .thread .posts {
+  width: 10%;
+  float: left;
+}
+.page-threads.page-forums-threads-new .threads .thread .latest {
+  width: 30%;
+  float: left;
+}
+.page-threads.page-forums-threads-new .threads .thread .latest .meta {
+  display: block;
+  font-size: 10px;
+}
 .widget-latest-threads li {
   position: relative;
 }
