--- a/public/css/backend.css
+++ b/public/css/backend.css
@@ -6613,33 +6613,10 @@ button.close {
 /*
  * Classes
  */
-.form-head {
-  display: block;
-  height: 60px;
-  line-height: 60px;
-  margin-bottom: 20px;
-  padding-left: 15px;
-  background: url('../theme/backend/form_head.png');
-  font-size: 14px;
-  font-weight: bold !important;
-  color: #666666 !important;
-}
-.form-head i {
-  margin-right: 10px;
-  padding: 2px 3px;
-  border-radius: 3px;
-  background-color: #4082E3;
-  color: #ffffff;
-}
 h2.section {
-  height: 30px;
-  line-height: 30px;
-  margin: 20px 0px;
-  padding: 0px 10px;
-  border: 1px solid #EFEFEF;
-  background: url('../theme/bg_textbox.png');
-  background-repeat: repeat-x;
-  font-size: 13px;
+  margin: 0px 0px 20px 0px;
+  font-size: 14px;
+  font-weight: bold;
 }
 /* Message */
 .ui-message {
@@ -6915,20 +6892,30 @@ textarea.model-search-box input[type=text] {
 .page-dashboard #chart {
   margin: 0px 0px 20px 5%;
   width: 90%;
-  height: 200px;
+  height: 250px;
+}
+.page-dashboard .quick-access {
+  margin: 20px 0px;
 }
 .page-dashboard .quick-access div {
-  width: 84px;
+  width: 16.666%;
+  box-sizing: border-box;
   float: left;
-  margin: 0px 13px 20px 13px;
-  padding: 5px 0px;
-  border: 1px solid #EEEEEE;
-  border-radius: 5px;
+  padding: 10px;
   text-align: center;
 }
-.page-dashboard .quick-access img {
+.page-dashboard .quick-access a {
   display: block;
-  padding-left: 18px;
+  margin: 0px 10px;
+  padding-bottom: 10px;
+  border-radius: 5px;
+  background-color: #139cdc;
+  color: white;
+}
+.page-dashboard .quick-access i {
+  display: block;
+  padding: 10px;
+  font-size: 40px;
 }
 .page-dashboard .widgets-row div {
   width: 50%;
@@ -7075,6 +7062,9 @@ header {
   right: 0px;
   z-index: 100;
 }
+header .msg a {
+  color: #ffffff;
+}
 header nav {
   float: right;
 }
@@ -7181,120 +7171,32 @@ header .header-logo {
 }
 #content {
   margin: 0px 0px 0px 250px;
-  padding: 80px 0px 0px 0px;
+  padding-top: 56px;
 }
-#content .statistic-box {
-  background-color: #ffffff;
-  height: 90px;
-  text-align: center;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+.page {
+  max-width: 900px;
+  margin: 0px 40px;
 }
-#content .statistic-box .statistic-box-blue {
-  background-color: #139cdc;
-  font-size: 48px;
-  color: #ffffff;
-  width: 25%;
-  float: left;
-  line-height: 1.85em;
-  -webkit-border-top-left-radius: 5px;
-  -webkit-border-bottom-left-radius: 5px;
-  -moz-border-radius-topleft: 5px;
-  -moz-border-radius-bottomleft: 5px;
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-#content .statistic-box .value {
-  font-weight: 700;
-  width: 75%;
-  float: left;
-  font-size: 30px;
-  padding: 9px 0px 0px 0px;
-}
-#content .statistic-box .description {
-  font-weight: 300;
-  width: 75%;
-  float: left;
-  font-size: 20px;
-  padding: 0px 0px 9px 0px;
-}
-#content #chart {
-  width: 100%;
-  height: 350px;
-}
-#content .blue-box {
-  color: #ffffff;
-  text-align: center;
-  font-size: 16px;
-  background-color: #139cdc;
-  margin-bottom: 15px;
-  padding: 10px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-#content .blue-box span {
+.page-head {
   display: block;
-  margin: 0px 0px 11px 0px;
-  font-size: 48px;
+  margin-bottom: 40px;
+  padding: 20px 0px 20px 40px;
+  border-bottom: 1px solid silver;
 }
-#content .blue-box:hover {
-  background-color: #0a8cc9;
-}
-#content .box-area {
-  background-color: #ffffff;
-  margin: 20px 15px 20px 15px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-#content .box-area .box-header {
-  padding: 0px 20px 0px 0px;
-  height: 40px;
-  font-size: 18px;
-  line-height: 2.2em;
+.page-head i {
+  margin-right: 10px;
+  padding: 2px 3px;
+  border-radius: 3px;
   background-color: #139cdc;
   color: #ffffff;
-  -webkit-border-top-left-radius: 5px;
-  -webkit-border-top-right-radius: 5px;
-  -moz-border-radius-topleft: 5px;
-  -moz-border-radius-topright: 5px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
 }
-#content .box-area .box-header .icon-area {
-  background-color: #0a8cc9;
-  float: left;
-  width: 40px;
-  text-align: center;
-  -webkit-border-top-left-radius: 5px;
-  -moz-border-radius-topleft: 5px;
-  border-top-left-radius: 5px;
-  font-size: 16px;
-  line-height: 2.5em;
+#footer {
+  margin-top: 40px;
+  padding: 20px 40px;
+  background-color: #eee;
+  color: #999;
 }
-#content .box-area .box-header .main-text {
-  font-weight: 700;
-  float: left;
-  padding: 0px 10px 0px 10px;
-}
-#content .box-area .box-header .small-text {
-  font-weight: 300;
-  float: left;
-}
-#content .box-area .box-header .edit-area {
+#footer .top {
+  color: silver;
   float: right;
-  color: #ffffff;
-  font-size: 16px;
-  line-height: 2.5em;
-}
-#content .box-area .box-header .edit-area button {
-  background-color: initial;
-  border: none;
-  padding: 0px;
-}
-#content .box-area .box-body {
-  padding: 20px;
-  clear: both;
 }
